# Diff

./: CHANGELOG.md  Diff.cabal  README.md  flake.nix
.github/workflows/: haskell-ci.yml  liquidhaskell.yml
Data/Algorithm/: Diff.hs
Diff-liquidhaskell/: Diff-liquidhaskell.cabal
bench/: bench.hs
src/Data/Algorithm/: Diff.hs  DiffContext.hs  DiffOutput.hs
src/Internal/: LiftedFunctions.hs
test/: Test.hs
