Cabal-Version:       1.18
name:                Diff
version:             1.0.2
synopsis:            Diff algorithm in pure Haskell
description:         Implementation of the standard diff algorithm in Haskell.
 .
 Time complexity is O(ND) (input length * number of differences).
 Space complexity is O(D^2).  Includes utilities for pretty printing.
category:            Algorithms
homepage:            https://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.4.6927
license:             BSD3
license-file:        LICENSE
author:              Sterling Clover
maintainer:          David Fox <dsf@seereason.com>
Build-Type:          Simple

tested-with:
  GHC == 9.14.1
  GHC == 9.12.2
  GHC == 9.10.3
  GHC == 9.8.4
  GHC == 9.6.7
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4

extra-doc-files:     CHANGELOG.md

library
  default-language: Haskell2010
  build-depends:
      base >= 4.11 && <= 6
    , array
    , pretty >= 1.1
  hs-source-dirs:  src
  exposed-modules:
                   Data.Algorithm.Diff,
                   Data.Algorithm.DiffOutput
                   Data.Algorithm.DiffContext
  ghc-options:     -Wall -funbox-strict-fields

source-repository head
  type:      git
  location:  https://github.com/seereason/Diff

test-suite diff-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  build-depends:
      Diff
    , base >= 3 && <= 6
    , array
    , pretty
    , directory
    , process
    , QuickCheck
    , test-framework
    , test-framework-quickcheck2
